Completed mobile tabbed menu

--- a/index.html
+++ b/index.html
@@ -62,17 +62,27 @@
             </div>
         </section>
         <section>
-            <h2>Mobile Menu</h2>
-            <p>Click on the hamburger menu:</p>
+            <h2>Mobile Tabbed Menu</h2>
+            <p>Click any tab:</p>
             <div class="mobile-menu">
                 <div class="mobile-menu__header">
-                    <div class="mobile-menu__header__title">Menu</div>
-                    <div class="mobile-menu__header__icon">X</div>
+                    <div class="mobile-menu__header__item selected_tab">Tab 1</div>
+                    <div class="mobile-menu__header__item">Tab 2</div>
+                    <div class="mobile-menu__header__item">Tab 3</div>
                 </div>
                 <div class="mobile-menu__body">
-                    <div class="mobile-menu__body__item">Home</div>
-                    <div class="mobile-menu__body__item">About</div>
-                    <div class="mobile-menu__body__item">Contact</div>
+                    <div class="mobile-menu__body__item selected_item">
+                        <p>Tab 1 content</p>
+                        <p>Some data that is something important.</p>
+                    </div>
+                    <div class="mobile-menu__body__item">
+                        <p>Tab 2 content</p>
+                        <p>Other data that is sorta good or required.</p>
+                    </div>
+                    <div class="mobile-menu__body__item">
+                        <p>Tab 3 content</p>
+                        <p>Don't let me down with this tab woah!!!!</p>
+                    </div>
                 </div>
             </div>
         </section>
