--- a/index.html
+++ b/index.html
@@ -90,14 +90,12 @@
             <h2>Image Slider</h2>
             <p>Click on the arrows to see the next image</p>
             <div class="image-slider">
-                <div class="image-slider__header">
-                    <div class="image-slider__header__icon">◀</div>
-                    <div class="image-slider__header__icon">▶</div>
-                </div>
+                <div class="image-slider__left">◀</div>
+                <div class="image-slider__right">▶</div>
                 <div class="image-slider__body">
-                    <img src="#" alt="image 1" class="image-slider__body__image">
-                    <img src="#" alt="image 3" class="image-slider__body__image">
-                    <img src="#" alt="image 2" class="image-slider__body__image">
+                    <img src="img/01.jpg" alt="image 1" class="image-slider__body__image">
+                    <img src="img/04.jpg" alt="image 3" class="image-slider__body__image">
+                    <img src="img/76.jpg" alt="image 2" class="image-slider__body__image">
                 </div>
             </div>
         </section>
