--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             margin: 0;
             padding: 0;
         }
+
         body {
             font-family: Arial, Helvetica, sans-serif;
             font-size: 16px;
@@ -22,16 +23,19 @@
             align-items: center;
             justify-content: center;
         }
+
         h1 {
             margin-bottom: 2rem;
         }
+
         section {
             min-width: 360px;
             margin: 2rem auto;
         }
+
         @media (min-width: 768px) {
             .container {
-                display:grid;
+                display: grid;
                 grid-template-columns: 1fr 1fr;
                 grid-template-rows: 1fr 1fr;
             }
@@ -102,18 +106,17 @@
         <section>
             <h2>Modal</h2>
             <p>Click on the button to see the modal</p>
-            <button class="btn btn--primary">Open Modal</button>
-            <div class="modal">
-                <div class="modal__header">
-                    <div class="modal__header__title">Modal Title</div>
-                    <div class="modal__header__icon">X</div>
-                </div>
-                <div class="modal__body">
-                    <p>Modal Body</p>
-                </div>
-                <div class="modal__footer">
-                    <button class="btn btn--primary">Save</button>
-                    <button class="btn btn--secondary">Cancel</button>
+            <button class="open-modal">Open Modal</button>
+            <div class="modal__overlay">
+                <div class="modal">
+                    <div class="modal__header">
+                        <div class="modal__header__title">Modal Title</div>
+                        <div class="modal__close">X</div>
+                    </div>
+                    <div class="modal__body">
+                        <p>Modal Body</p>
+                        <p>Sign Up Form maybe ;P</p>
+                    </div>
                 </div>
             </div>
         </section>
