Completed image-slider

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                 <div class="image-slider__left">◀</div>
                 <div class="image-slider__right">▶</div>
                 <div class="image-slider__body">
-                    <img src="img/01.jpg" alt="image 1" class="image-slider__body__image">
-                    <img src="img/04.jpg" alt="image 3" class="image-slider__body__image">
-                    <img src="img/76.jpg" alt="image 2" class="image-slider__body__image">
+                    <img src="img/01.jpg" alt="image 1" class="carousel_img active">
+                    <img src="img/04.jpg" alt="image 3" class="carousel_img">
+                    <img src="img/76.jpg" alt="image 2" class="carousel_img">
                 </div>
             </div>
         </section>
